--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,18 +10,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.16
-    - name: Vet
-      run: go vet -v ./...
-    - name: Install staticcheck
-      run: go install honnef.co/go/tools/cmd/staticcheck@latest
-    - name: Run staticcheck
-      run: staticcheck ./...
-    - name: Build
-      run: go build -v ./...
-    - name: Test
-      run: go test -v -cover ./...
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.16
+      - name: Install staticcheck
+        run: go install honnef.co/go/tools/cmd/staticcheck@latest
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Vet
+        run: go vet -v ./...
+      - name: Run staticcheck
+        run: staticcheck ./...
+      - name: Build
+        run: go build -v ./...
+      - name: Test
+        run: go test -v -cover ./...
