--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,18 +9,27 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+    strategy:
+      fail-fast: false
+      matrix:
+        go-version:
+          - 1.16
+          - 1.13
     steps:
-      - name: Install Go
+      - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.16
-      - name: Install staticcheck
+          go-version: ${{ matrix.go-version }}
+      - name: Set up Staticcheck
         run: go install honnef.co/go/tools/cmd/staticcheck@latest
       - name: Checkout
         uses: actions/checkout@v2
       - name: Vet
         run: go vet -v ./...
-      - name: Run staticcheck
+      - name: Staticcheck
         run: staticcheck ./...
       - name: Build
         run: go build -v ./...
