--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Set up Staticcheck
         run: go install honnef.co/go/tools/cmd/staticcheck@latest
         if: ${{ matrix.go-version != '1.13' }}
-      - name: Set up Staticcheck
+      - name: Set up Staticcheck (Go v1.13)
         run: GO111MODULE=on go get -u honnef.co/go/tools/cmd/staticcheck@2021.1
         if: ${{ matrix.go-version == '1.13' }}
       - name: Checkout
