--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,21 +16,18 @@ jobs:
       fail-fast: false
       matrix:
         go-version:
-          - 1.17
-          - 1.13
+          - '1.21'
+          - '1.20'
     steps:
       - name: Set up Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v4
         with:
           go-version: ${{ matrix.go-version }}
+          check-latest: true
       - name: Set up Staticcheck
         run: go install honnef.co/go/tools/cmd/staticcheck@latest
-        if: ${{ matrix.go-version != '1.13' }}
-      - name: Set up Staticcheck (Go v1.13)
-        run: GO111MODULE=on go get -u honnef.co/go/tools/cmd/staticcheck@2021.1
-        if: ${{ matrix.go-version == '1.13' }}
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Vet
         run: go vet -v ./...
       - name: Staticcheck
@@ -38,4 +35,4 @@ jobs:
       - name: Build
         run: go build -v ./...
       - name: Test
-        run: go test -v -cover ./...
+        run: go test -v -cover -race -count=3 ./...
